--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,6 +4,9 @@ engines:
     enabled: true
   duplication:
     enabled: true
+    exclude_fingerprints:
+    - 8b720e14ef793a7c8aff12b191e923c9
+    - c994ba6afd02cca16e197f3367e24804
     config:
       languages:
       - javascript
